# spacenet5-m2-baseline

./: .gitignore  README.md  evaluate.py  pyproject.toml  requirements.txt  verify_env.py
data/: download_s3.py  make_masks.py
infer/: graph.py  predict.py  skeletonize.py  speed.py
train/: dataset.py  loss.py  model.py  train.py
viz/: overlay.py
