[project]
name = "m2-baseline"
version = "0.1.0"
description = "SpaceNet 5 baseline for M2 MacBook Air (learning purpose)"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "segmentation-models-pytorch>=0.3.3",
    "albumentations>=1.4.0",
    "rasterio>=1.3.9",
    "geopandas>=0.14.3",
    "shapely>=2.0.4",
    "fiona>=1.9.6",
    "pyproj>=3.6.1",
    "scikit-image>=0.22.0",
    "opencv-python-headless>=4.9.0.80",
    "networkx>=3.3",
    "sknw>=0.15",
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    "scipy>=1.13.0",
    "matplotlib>=3.8.4",
    "folium>=0.16.0",
    "wandb>=0.17.0",
    "tqdm>=4.66.4",
    "Pillow>=10.3.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.4",
]

[tool.uv]
dev-dependencies = []
